feat: open new register modal in all project

--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
@@ -1,6 +1,6 @@
 
 <div class="contents-register" [ngClass]="{'registerCancelActive' : registerCancel}">
-    <div class="banner">
+    <div class="banner" *ngIf="hasRegisterBanner">
         <div
             class="banner__mobile"
             *ngIf="registerBannerMobile"
