--- a/src/app/clientes/personal-data/personal-data.component.html
+++ b/src/app/clientes/personal-data/personal-data.component.html
@@ -1,7 +1,7 @@
 <div id="personal-data-page" [ngStyle]="{'height': currentHeight + 'px'}">
     <div class="page-title">
         <h1>Dados pessoais</h1>
-        <p>Descrição, vê o texto para inserir aqui.</p>
+        <p>Atualize e gerencie suas informações, como nome, e-mail e telefone, para garantir uma experiência personalizada e segura no sistema.</p>
     </div>
 
     <div class="wb-accordion">
