--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
@@ -446,7 +446,7 @@
                     </div>
                     <div>
                         <ng-container *ngIf="promocaoAtiva && valorPromocao; else noPromotion">
-                            <p>{{ 'registerCancel.dontMissOut' | translate}} {{this.valorPromocao | currency}}</p>
+                            <p class="p-cancel-register">{{ 'registerCancel.dontMissOut' | translate}} {{this.valorPromocao | currency}}</p>
                         </ng-container>
                         <ng-template #noPromotion>
                             <p class="p-cancel-register">{{ 'registerCancel.youreAlmostThere' | translate}}</p>
