--- a/src/app/shared/layout/modals/login-modal/login-modal.component.html
+++ b/src/app/shared/layout/modals/login-modal/login-modal.component.html
@@ -76,7 +76,7 @@
                                 <div [ngClass]="applyCssDivError('password')">
                                     <div class="input-md">
                                         <input [type]=" mostrarSenha ? 'text' : 'password' " id="password" class="form-control inverted-out" [ngClass]="applyCssInputError('password')"
-                                            formControlName="password" placeholder=" " (beforeinput)="onBeforeInput($event, 'password')">
+                                            formControlName="password" (beforeinput)="onBeforeInput($event, 'password')">
                                         <label for="password">{{'geral.senha' | translate}}</label>
                                         <i class="fa showPassword" [ngClass]="mostrarSenha ? 'fa-eye-slash' : 'fa-eye'" (click)="toogleSenha()"></i>
                                     </div>
@@ -88,7 +88,7 @@
                                     </a>
                                 </div>
                                 <div class="button-entrar">
-                                    <button *ngIf="!btnDisabled; else btnProcessando"  type="submit" class="btn btn-custom btn-block">
+                                    <button [disabled]="form.invalid" *ngIf="!btnDisabled; else btnProcessando"  type="submit" class="btn btn-custom btn-block btn-login">
                                         {{'geral.entrar' | translate}}
                                     </button>
                                 </div>
