--- a/src/app/shared/layout/modals/verify-email-or-phone/verify-email-or-phone.component.scss
+++ b/src/app/shared/layout/modals/verify-email-or-phone/verify-email-or-phone.component.scss
@@ -9,6 +9,7 @@
     position: fixed;
     overflow-x: hidden;
     border-radius: 4px;
+    height: 100%;
 
     &__footer {
         margin-top: 50px;
