--- a/src/app/casino/wall/components/wall-section/wall-section.component.html
+++ b/src/app/casino/wall/components/wall-section/wall-section.component.html
@@ -21,11 +21,11 @@
         </div>
     </div>
 
-    <a
-        class="wall-section__see-all"
-        *ngIf="showSeeAllButton"
-        (click)="handleSeeAll()"
-    >
-        {{'geral.verTodos' | translate}}
-    </a>
+    <!--<a-->
+    <!--    class="wall-section__see-all"-->
+    <!--    *ngIf="showSeeAllButton"-->
+    <!--    (click)="handleSeeAll()"-->
+    <!-->-->
+    <!--    {{'geral.verTodos' | translate}}-->
+    <!--</a>-->
 </div>
