--- a/src/app/casino/wall/wall.component.css
+++ b/src/app/casino/wall/wall.component.css
@@ -6,6 +6,7 @@
 
     display: flex;
     flex-direction: column;
+    gap: 24px;
 }
 
 .wall-container.virtual-container {
@@ -14,7 +15,7 @@
 
 .bloco {
     position: relative;
-    padding: 0 20px 24px 20px;
+    padding: 0 20px 0 20px;
     margin: 0 auto;
     width: 100%;
 }
@@ -52,7 +53,7 @@
     gap: 10px;
     flex-wrap: wrap;
     -ms-overflow-style: none;
-    scrollbar-width: none; 
+    scrollbar-width: none;
     padding-left: 18px;
     margin-left: -18px;
 }
@@ -144,7 +145,6 @@
     flex-direction: column;
     gap: 20px;
     width: 100%;
-    margin-top: 16px;
 }
 
 .box-web{
@@ -196,23 +196,23 @@ app-back-page {
 
 @media only screen and (min-width: 320px) and (max-width: 768px){
     .blocoGameList{
-        padding: 0 0 24px 10px !important;
+        padding: 0 0 0 10px !important;
     }
 
     .bloco {
         position: relative;
-        padding: 0 0 24px 10px;
+        padding: 0 0 0 10px;
         width: 100%;
     }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1279px){
     .blocoGameList{
-        padding: 0 0 24px 16px !important;
+        padding: 0 0 0 16px !important;
     }
 
     .bloco {
-        padding: 0 0 24px 16px;
+        padding: 0 0 0 16px;
     }
 
     .game-grid {
@@ -264,7 +264,7 @@ app-back-page {
         cursor: auto;
         transition: 500ms;
     }
-   
+
     .more-games-fade-right {
         background-image: linear-gradient(to left, rgba(var(--background-rgb), 1) 10%, rgba(var(--background-rgb), 0.01));
         right: -2px;
@@ -382,14 +382,14 @@ app-back-page {
     }
 
     .bloco {
-        padding: 0 0 24px 18px;
+        padding: 0 0 0 18px;
     }
 
     .blocoGameList{
-        padding: 0 0 24px 18px !important;
+        padding: 0 0 0 18px !important;
     }
 
     .game-grid {
         padding-right: 18px;
     }
-} 
+}
