--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.scss
@@ -87,19 +87,25 @@ input.inverted-out:focus label{
     padding-right: calc(1.5em + 0.75rem);
 }
 
-
 .container-header {
     display: flex;
     flex-direction: column;
     gap: 14px;
     margin-bottom: auto;
-    padding-top: 40px;
 }
 
 .header-register {
     color: var(--foreground);
     display: flex;
     width: 100%;
+    padding-bottom: 10px;
+
+    &--with-banner {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 16px;
+    }
 }
 
 .header-register-item {
@@ -522,7 +528,7 @@ a.link-termos-politica {
     background-color: var(--background);
     display: flex;
     flex-direction: column;
-    height: 100svh;
+    height: 100%;
 }
 
 .registerCancelActive{
