--- a/src/app/shared/layout/modals/login-modal/login-modal.component.css
+++ b/src/app/shared/layout/modals/login-modal/login-modal.component.css
@@ -299,7 +299,7 @@ h3 {
 }
 
 .modal-content {
-    background-color: var(--background);
+    background-color: var(--background) !important;
     padding: 20px;
     border-radius: 4px;
     width: 100%;
