feature: new layout register v3

--- a/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
+++ b/src/app/shared/layout/modals/register-v3-modal/register-v3-modal.component.html
@@ -173,7 +173,7 @@
                                                 formControlName="nationality"
                                                 style="font-size: 12px;"
                                             >
-                                                <option selected [value]="26">{{'register.brasil' | translate}}</option>
+                                                <option selected [value]="Brasil">{{'register.brasil' | translate}}</option>
                                                 <option
                                                     *ngFor="let nationality of nationalities"
                                                     [value]="nationality.name"
