--- a/src/app/shared/layout/bilhete-compartilhamento/bilhete-compartilhamento.component.html
+++ b/src/app/shared/layout/bilhete-compartilhamento/bilhete-compartilhamento.component.html
@@ -81,7 +81,7 @@
                 <p class="ganho" *ngIf="aposta.resultado || aposta.resultado == 'a confirmar'">
                     {{'geral.premio' | translate | uppercase}}: <span style="float:right">{{aposta.premio | currency}}</span>
                 </p>
-                <p *ngIf="enabledBookie" class="cambista-paga">
+                <p *ngIf="enabledBookie && cambistaPaga > 0" class="cambista-paga">
                     CAMBISTA PAGA: <span style="float:right">{{cambistaPaga ?? 0 | currency}}</span>
                 </p>
                 <hr>
