--- a/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.html
+++ b/src/app/shared/layout/exibir-bilhete/desafio/exibir-bilhete-desafio.component.html
@@ -45,7 +45,7 @@
                     Possível retorno: <span style="float:right">{{aposta.possibilidade_ganho | currency}}</span>
                 </p>
             </ng-template>
-            <p *ngIf="enabledBookie" class="cambista-paga">
+            <p *ngIf="enabledBookie && cambistaPaga > 0" class="cambista-paga">
                 Cambista paga: <span style="float:right">{{cambistaPaga ?? 0 | currency}}</span>
             </p>
         </div>
