adjust: bonus cancellation released

--- a/src/app/clientes/promocao/promocao.component.html
+++ b/src/app/clientes/promocao/promocao.component.html
@@ -132,9 +132,9 @@
                                             <ng-container *ngIf="rollover.status == 'completado'  && !rollover.convertido">
                                                 <button class="btn btn-custom btn-converterBonus" (click)="converterBonus(rollover.id)"> Converter Bônus</button>
                                             </ng-container>
-<!--                                            <ng-container *ngIf="rollover.status == 'ativo'">-->
-<!--                                                <button class="btn btn-custom btn-converterBonus" (click)="cancelarBonus(rollover.id)"> Cancelar Bônus</button>-->
-<!--                                            </ng-container>-->
+                                           <ng-container *ngIf="rollover.status == 'ativo'">
+                                               <button class="btn btn-custom btn-converterBonus" (click)="cancelarBonus(rollover.id)"> Cancelar Bônus</button>
+                                            </ng-container>
                                         </td>
                                     </tr>
                                 </ng-container>
@@ -192,9 +192,9 @@
                                             <ng-container *ngIf="rollover.status == 'completado'  && !rollover.convertido">
                                                 <button class="btn btn-custom btn-converterBonus" (click)="converterBonus(rollover.id)"> Converter Bônus</button>
                                             </ng-container>
-<!--                                            <ng-container *ngIf="rollover.status == 'ativo'">-->
-<!--                                                <button class="btn btn-custom btn-converterBonus" (click)="cancelarBonus(rollover.id)"> Cancelar Bônus</button>-->
-<!--                                            </ng-container>-->
+                                           <ng-container *ngIf="rollover.status == 'ativo'">
+                                               <button class="btn btn-custom btn-converterBonus" (click)="cancelarBonus(rollover.id)"> Cancelar Bônus</button>
+                                           </ng-container>
                                         </td>
                                     </tr>
                                 </ng-container>
