--- a/src/styles.css
+++ b/src/styles.css
@@ -1987,6 +1987,14 @@ label {
     }
 }
 
+@media only screen and (max-width: 768px) {
+    .modal-account-verified-success .modal-dialog {
+        max-width: 100%;
+        height: 100%;
+        margin: 0;
+    }
+}
+
 .webpush-swal2-popup .webpush-swal2-modal .webpush-swal2-show {
     background: none !important;
 }
